<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDulwich</string>
    <string name="action_settings">Settings</string>
    <string name="dulwich_college">Dulwich College</string>
    <string name="app_tagline">MyDulwich for Android</string>
    <string name="am_student">I am a student</string>
    <string name="am_teacher">I am a teacher</string>
    <string name="am_parent">I am a parent</string>
    <string name="am_guest">I am a guest</string>
    <string name="am_lowerschool">I\'m in the Lower School</string>
    <string name="am_middleschool">I\'m in the Middle School</string>
    <string name="am_upperschool">I\'m in the Upper School</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="activity_studenthome">activity_studenthome</string>
    <string name="label_home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string-array name="panels">
        <item>Dashboard</item>
        <item>Notices</item>
    </string-array>

    <string name="description">An app for prospective and current students or parents of Dulwich College.</string>
    <string name="action_about">About/Help</string>
    <string name="title_activity_help">Beta Testing</string>

</resources>
