<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SplashLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="-250dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/splash"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    tools:context=".Splash" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="240dp"
        android:layout_marginTop="-240dp"
        android:contentDescription="@string/app_tagline"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        android:visibility="gone" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/whitebutton"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/am_student"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/whitebutton"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/am_teacher"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/whitebutton"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/am_parent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/whitebutton"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/am_guest"
        android:textSize="20sp" />

</LinearLayout>